--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^2.4.3",
     "@angular/router": "^3.4.3",
     "core-js": "^2.4.1",
+    "ng2-translate": "^5.0.0",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "0.7.4"
